[tool.poetry]
name = "xanadiscordbot"
version = "0.1.0"
description = "XanaDiscordBot"
authors = ["vukilis <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
"discord.py" = "^1.7.3"
discord-components = "^2.1.2"
DiscordUtils = "^1.3.4"
Voice = "^0.1.0"
bs4 = "^0.0.1"
Flask = "^2.0.2"
youtube_dl = "^2021.6.6"
PyNaCl = "^1.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
